examples/datalog/17_rule_commands/10_drop_nonexistent_rule.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_drop_noexist
Knowledge graph 'test_drop_noexist' created.
Switched to knowledge graph: test_drop_noexist
> .kg use test_drop_noexist
Switched to knowledge graph: test_drop_noexist
> .rule list
No rules defined.
> .rule drop nonexistent_rule
Script error: Rule 'nonexistent_rule' not found
