examples/datalog/17_rule_commands/10_drop_nonexistent_rule.dl
% Test: Drop non-existent rule error
% Category: 17_rule_commands
% Priority: P0 Critical - Error handling for rule management
% Description: `.rule drop` on a rule that doesn't exist should return an error.

.kg create test_drop_noexist
.kg use test_drop_noexist

% List rules - should be empty
.rule list

% Try to drop a rule that doesn't exist - should error
.rule drop nonexistent_rule

% Verify list is still empty
.rule list

% Cleanup
.kg use default
.kg drop test_drop_noexist
